# movie-theater-server

./: .gitignore  Cargo.toml  README.md
data/: database.surql  theater_db.surql  theater_db_2.surql  theater_db_V2.surql
data/movies/: big_shark.json  car_botz.json  plan_9.json  rocky_horror.json  samuri_cop_2.json  the_room.json
data/movies/raw/: raw big_shark.json  raw car_botz.json  raw plan_9.json  raw rocky_horror.json  raw samurai_cop_2.json  raw the_room.json
data/old/: best_friends.json  best_friends_2.json
data/people/: people.json  people_big_shark.json  people_car_botz.json  people_plan_9.json  people_rocky_horror.json  people_samuri_cop_2.json  people_the_room.json
src/: account.rs  landing.rs  login.rs  main.rs  movie.rs  purchase.rs  seating.rs
templates/: about.html  booking.html  complete.html  contact.html  footer.html  home.html  image.html  index.html  login.html  movie_page.html  purchase.html  search_results.html  seat_confirmation.html  seating.html  showtime.html  sign_up.html  temp.html  tickets.html  times.html  unavailable.html
testing templates/: seat not javascript.html  seating.html
theater.db/: IDENTITY  LOG  LOG.old.1701272807747446  MANIFEST-000010
