[package]
name = "axum_movie_theater_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["query"] }
chrono = { version = "0.4.31", features = ["std"] }
hyper-staticfile = "0.9.5"
once_cell = "1.18.0"
serde = "1.0.188"
surrealdb = "1.0.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
